# Quadruped_Robot_Modeling

./: README.md
testudog/: CMakeLists.txt  package.xml
testudog/controller/include/testudog/: testudog.h
testudog/controller/src/: main.cpp  testudog.cpp
testudog/launch/: testudog_launch.launch
